# R-Type

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RFC.txt  RFC_01.txt  RFC_02.txt  RFC_03.txt  imgui.ini  make.sh  vcpkg.json
Cinematic/: CMakeLists.txt  Cinematic.hpp
Cinematic/src/Components/: Animation.hpp
Cinematic/src/Entity/: CreateBackground.cpp  CreateBackground.hpp
Cinematic/src/Event/: AnimationEvent.hpp  EntityEventSubscriber.cpp  EntityEventSubscriber.hpp  README.md  TakeDamage.hpp
Cinematic/src/Scripts/: FollowingCamera.hpp  Train.hpp
Cinematic/src/System/: AnimationSystem.cpp  AnimationSystem.hpp
CinematicClient/: CMakeLists.txt  Cinematic.proj
CinematicClient/src/: Cinematic.cpp
CinematicClient/src/Layer/: CinematicLayer.cpp  CinematicLayer.hpp
Client/: CMakeLists.txt  R-Type.proj
Client/src/: RType.cpp
Client/src/Layer/: RTypeLayer.cpp  RTypeLayer.hpp
Examples/: CMakeLists.txt
Examples/Application/: CMakeLists.txt  README.md
Examples/Application/src/: ApplicationExample.cpp  DefaultLayer.cpp  DefaultLayer.hpp
Examples/ApplicationWithSpriteRenderer/: CMakeLists.txt  README.md
Examples/ApplicationWithSpriteRenderer/src/: ApplicationExample.cpp  DefaultLayer.cpp  DefaultLayer.hpp
Examples/ChildrenComponent/: CMakeLists.txt
Examples/ChildrenComponent/src/: DefaultLayer.cpp  DefaultLayer.hpp
Examples/ChildrenComponent/src/Script/: Dobkeratops.hpp
Examples/DefaultSystem/: CMakeLists.txt  README.md
Examples/DefaultSystem/src/: DefaultLayer.cpp  DefaultLayer.hpp
Examples/DefaultSystem/src/EventSubscriber/: CollisionStop.hpp
Examples/DefaultSystem/src/Script/: Player.hpp
Examples/Entity-Component-System/: CMakeLists.txt  README.md
Examples/Entity-Component-System/src/: ComponentExample.hpp  FortniteEvent.hpp  GravitySystem.hpp  Main.cpp
Examples/ImGui/: CMakeLists.txt
Examples/ImGui/Docking/: CMakeLists.txt  README.md
Examples/ImGui/Docking/src/: ApplicationExample.cpp  DockerLayer.cpp  DockerLayer.hpp  StatImGui.hpp  ViewportImGui.hpp
Examples/Network/: CMakeLists.txt
Examples/Network/ComponentSend/: CMakeLists.txt
Examples/Network/ComponentSend/Client/: CMakeLists.txt
Examples/Network/ComponentSend/Server/: CMakeLists.txt
Examples/Network/UDPWrapper/: README.md
Examples/Network/UDPWrapper/Client/: CMakeLists.txt
Examples/Script/: CMakeLists.txt  README.md
Examples/Script/src/: DefaultLayer.cpp  DefaultLayer.hpp
Exodia/: CMakeLists.txt
Exodia/src/: Exodia-Editor.cpp
Exodia/src/Layer/: EditorLayer.cpp  EditorLayer.hpp
Exodia/src/Thumbnail/: ThumbnailCache.cpp  ThumbnailCache.hpp
GameEngine/: CMakeLists.txt
GameEngine/src/: Exodia.hpp
GameEngine/src/Exodia/: EntryPoint.hpp
GameEngine/src/Network/: Network.cpp  Network.hpp  Network.md  NetworkReceiver.cpp  NetworkSender.cpp
GameEngine/src/Utils/: Assert.hpp  CrossPlatform.hpp  LibrairyLoader.hpp  Memory.hpp  PlatformUtils.hpp
R-Type/: CMakeLists.txt  R-Type.hpp  R-Type.proj
R-Type/Component/: Animation.hpp  Clock.hpp  Health.hpp  README.md
R-Type/Entity/: CreateBackground.cpp  CreateBackground.hpp  CreatePataPata.cpp  CreatePataPata.hpp  CreatePlayer.cpp  CreatePlayer.hpp  CreateStars.cpp  CreateStars.hpp  README.md
R-Type/Event/: README.md
R-Type/Scripts/: BulletEnnemy.hpp  BulletPlayer.hpp  Button.hpp  CMakeLists.txt  Pata-pata.hpp  Star.hpp  TestScript.cpp  TestScript.hpp
R-Type/Scripts/Player/: Player.cpp  Player.hpp
R-Type/System/: AnimationSystem.hpp
R-Type/src/: SceneType.hpp
R-Type/src/Component/: Animation.hpp  Clock.hpp  Health.hpp
R-Type/src/Entity/: CreateBackground.cpp  CreateBackground.hpp  CreatePataPata.cpp  CreatePataPata.hpp  CreatePlayer.cpp  CreatePlayer.hpp  CreateStars.cpp  CreateStars.hpp
R-Type/src/Event/: AnimationEvent.hpp  EntityEventSubscriber.cpp  EntityEventSubscriber.hpp  TakeDamage.hpp
R-Type/src/Scripts/: Background.hpp  BulletEnnemy.hpp  BulletPlayer.hpp  Button.hpp  Pata-pata.hpp  Star.hpp
R-Type/src/System/: AnimationSystem.cpp  AnimationSystem.hpp  ClockSystem.cpp  ClockSystem.hpp  README.md
SandBox/: CMakeLists.txt  README.md
SandBox/DefaultApp/: CMakeLists.txt
SandBox/Enzo/: CMakeLists.txt  README.md
SandBox/Enzo/Assets/: AssetRegistry.asset
SandBox/Enzo/Client/: CMakeLists.txt
SandBox/Enzo/R-Type/: CMakeLists.txt  R-Type.hpp
SandBox/Enzo/src/: AnimationSystem.hpp  ApplicationExample.cpp  ComponentExample.hpp  DefaultLayer.cpp  DefaultLayer.hpp  main.cpp
SandBox/Ethan/: CMakeLists.txt
SandBox/Ethan/Assets/: AssetRegistry.asset  R-Type.proj
SandBox/Ethan/Client/: CMakeLists.txt
SandBox/Ethan/R-Type/: CMakeLists.txt  R-Type.hpp
SandBox/FlappyBird/: CMakeLists.txt
SandBox/FlappyBird/Assets/: AssetRegistry.asset
SandBox/FlappyBird/src/: FlappyBird.cpp
SandBox/GameEngine/: CMakeLists.txt
SandBox/GameEngine/src/: Exodia.hpp
SandBox/Medhi/: CMakeLists.txt
SandBox/Medhi/src/: AnimationSystem.hpp  ComponentExample.hpp  DefaultLayer.cpp  DefaultLayer.hpp
SandBox/R-Type/: imgui.ini
SandBox/R-Type/Assets/: AssetRegistry.asset  R-Type.proj
SandBox/R-Type/ExodiaEditor/: CMakeLists.txt
SandBox/R-Type/R-Type/: CMakeLists.txt  R-Type.hpp
SandBox/R-Type/RT_Client/: CMakeLists.txt
Server/: CMakeLists.txt
Server/src/: Main.cpp  Server.cpp  Server.hpp
Server/src/User/: User.cpp  User.hpp
flappybird/: CMakeLists.txt  R-Type.proj
flappybird/Assets/: AssetRegistry.asset  FlappyBird.proj
flappybird/Assets/Prefabs/: Camera.prefab  FlappyBird.prefab  obstacle.prefab
flappybird/Assets/Shaders/: Texture.glsl
flappybird/src/: FlappyBird.cpp  FlappyBird.hpp  Main.cpp
flappybird/src/Entity/: Player.cpp  Player.hpp
flappybird/src/Game/: FlappyBird.hpp
flappybird/src/Layer/: GameLayer.cpp  GameLayer.hpp
flappybird/src/Level/: Level.cpp  Level.hpp
flappybird/src/Particles/: Particles.cpp  Particles.hpp
flappybird/src/Scripts/: Player.cpp  Player.hpp
flappybird/src/Tools/: Collider.hpp  Color.hpp  ParticleProps.hpp  Random.cpp  Random.hpp
(+638 files in other folders)
